<resources>
    <string name="app_name">EduExamine</string>
    <string name="answer_question_paper" />
    <string name="view_results" />
    <string name="courses" />
    <string name="paragraph_part1">This is the first part of a very long paragraph...</string>
    <string name="paragraph_part2">And this is the continuation of that paragraph...</string>

    <string name="Student_Dashboard">Student Dashboard</string>
    <string name="welcome_student">Welcome Student!</string>
    <string name="take_exam">Take Exam</string>
    <string name="my_courses">My Courses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">OPEN NAVIGATION DRAWER</string>
    <string name="navigation_drawer_close">CLOSE NAVIGATION DRAWER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_course">Add Course</string>
    <string name="todo">TODO</string>
    <string name="des">Do You Want To Update Your Password</string>
    <string name="del">Do You Want To Delete Your Account</string>
    <string name="exam">Exam</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>