<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9BB5E0"
    tools:context=".StudentHome">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="576dp"
        android:background="#3498db"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Student_Dashboard"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/green_circle" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/toptext"
        android:layout_width="196dp"
        android:layout_height="61dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="503dp"
        android:background="#D8BFD8"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/welcome_student"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:src="@drawable/profile2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="95dp"
        android:layout_height="91dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="346dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/takeexam" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="86dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="302dp"
        android:gravity="center"
        android:text="@string/take_exam"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="188dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/results" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="116dp"
        android:layout_height="74dp"
        android:layout_marginStart="226dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/view_results"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="138dp"
        android:layout_height="147dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/courses" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="224dp"
        android:layout_height="36dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="125dp"
        android:gravity="center"
        android:text="@string/my_courses"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
